# video-analyzer-assessment

./: .gitignore  FIXES_APPLIED.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  Note.md  PR_SUMMARY.md  QUICKSTART.md  README.md  SECURITY_SUMMARY.md  SETUP_GUIDE.md  check_setup.py  main.py  model_download.py  requirements.txt  test_simple_server.py
backend/: agent_manager_service.py  attachments_store.py  client_submit_task.py  db.py  enhanced_server.py  grpc_client_get_history.py  grpc_client_stream.py  ingest.py  mcp_server.py  server.py
backend/agents/: agent_base.py  dummy_agents.py  generation_agent.py  transcription_agent.py  vision_agent.py
backend/llm/: llm_wrapper.py  rag.py
backend/protos/: __init__.py  agent_manager_pb2.py  agent_manager_pb2_grpc.py  chat_pb2.py  chat_pb2_grpc.py  common_pb2.py  generation_pb2.py  generation_pb2_grpc.py  transcription_pb2.py  transcription_pb2_grpc.py  vision_pb2.py  vision_pb2_grpc.py
backend/utils/: generation_utils.py  transcribe.py  vision_utils.py
data/: chat_history.db
frontend/: package-lock.json  package.json
frontend/scripts/: compile-proto.js
frontend/src/: App.tsx  grpcClient.ts
frontend/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
frontend/src-tauri/src/: commands.rs  lib.rs  main.rs
frontend/src-tauri/src/protos/: chat_pb2.py  chat_pb2_grpc.py
frontend/src/components/: ArtifactViewer.tsx  ChatWindow.tsx  HistoryPanel.tsx  ModalChoice.tsx  UploadPanel.tsx
frontend/src/grpc/: agent_manager.ts  chat.ts  common.ts  generation.ts  transcription.ts  vision.ts
frontend/src/grpc/google/protobuf/: empty.ts  (+1 more)
protos/: agent_manager.proto  chat.proto  common.proto  generation.proto  transcription.proto  vision.proto
