[package]
name = "video_analyzer_tauri"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tonic = { version = "0.9", features = ["transport"] }
prost = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"

[build-dependencies]
tonic-build = "0.9"
