[package]
name = "video_analyzer_tauri"
version = "0.1.0"
edition = "2021"

[lib]
name = "video_analyzer_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
# Core Tauri framework - Remove features that need tauri.conf.json config
tauri = { version = "2.9.1", features = [] }
tauri-plugin-log = "2" 
log = "0.4"    
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
lazy_static = "1.4"

# Async runtime (keeping minimal features since we're not doing direct gRPC in Rust)
tokio = { version = "1.35", features = ["macros", "rt-multi-thread", "process", "io-util"] }

# Optional: Keep these if you plan to add Rust gRPC client later
# tonic = "0.11"
# prost = { version = "0.12", features = ["derive"] }
# prost-types = "0.12"
# futures-core = "0.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
base64 = "0.21"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.11"

# Add this to fix the mobile cfg warning
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(mobile)'] }
